@@ -1,71 +1,62 @@
 package ru.yandex.practicum.telemetry.analyzer.service;
 
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.PersistenceContext;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
-import ru.yandex.practicum.telemetry.analyzer.model.Action;
-import ru.yandex.practicum.telemetry.analyzer.model.Condition;
 import ru.yandex.practicum.telemetry.analyzer.model.Scenario;
 import ru.yandex.practicum.telemetry.analyzer.model.ScenarioAction;
 import ru.yandex.practicum.telemetry.analyzer.model.ScenarioCondition;
+import ru.yandex.practicum.telemetry.analyzer.repo.ScenarioRepository;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 public class ScenarioRuntimeLoader {
 
-    @PersistenceContext
-    private EntityManager em;
+    private final ScenarioRepository scenarioRepository;
+
+    public ScenarioRuntimeLoader(ScenarioRepository scenarioRepository) {
+        this.scenarioRepository = scenarioRepository;
+    }
 
     @Transactional(readOnly = true)
-    public List<ScenarioRuntime> loadScenarioRuntime(String hubId) {
-        List<Scenario> scenarios = em.createQuery(
-                        "select s from Scenario s where s.hubId = :hubId",
-                        Scenario.class
-                )
-                .setParameter("hubId", hubId)
-                .getResultList();
-
-        return scenarios.stream()
-                .map(this::mapScenario)
-                .collect(Collectors.toList());
+    public List<ScenarioRuntime> loadByHubId(String hubId) {
+        List<Scenario> scenarios = scenarioRepository.findFullByHubId(hubId);
+        return scenarios.stream().map(this::mapScenario).toList();
     }
 
     private ScenarioRuntime mapScenario(Scenario s) {
-        List<ScenarioConditionRuntime> conditions = s.getConditions().stream()
+        List<ScenarioRuntime.ConditionCheck> conditions = s.getConditions().stream()
                 .map(this::mapCondition)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ScenarioActionRuntime> actions = s.getActions().stream()
+        List<ScenarioRuntime.ActionCmd> actions = s.getActions().stream()
                 .map(this::mapAction)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
         return new ScenarioRuntime(s.getHubId(), s.getName(), conditions, actions);
     }
 
-    private ScenarioConditionRuntime mapCondition(ScenarioCondition sc) {
-        if (sc == null || sc.getSensor() == null || sc.getCondition() == null) return null;
-        Condition c = sc.getCondition();
-        return new ScenarioConditionRuntime(
+    private ScenarioRuntime.ConditionCheck mapCondition(ScenarioCondition sc) {
+        if (sc.getSensor() == null || sc.getCondition() == null) return null;
+        if (sc.getCondition().getValue() == null) return null;
+        return new ScenarioRuntime.ConditionCheck(
                 sc.getSensor().getId(),
-                c.getType(),
-                c.getOperation(),
-                c.getValue()
+                sc.getCondition().getType(),
+                sc.getCondition().getOperation(),
+                sc.getCondition().getValue()
         );
     }
 
-    private ScenarioActionRuntime mapAction(ScenarioAction sa) {
-        if (sa == null || sa.getSensor() == null || sa.getAction() == null) return null;
-        Action a = sa.getAction();
-        return new ScenarioActionRuntime(
+    private ScenarioRuntime.ActionCmd mapAction(ScenarioAction sa) {
+        if (sa.getSensor() == null || sa.getAction() == null) return null;
+        if (sa.getAction().getValue() == null) return null;
+        return new ScenarioRuntime.ActionCmd(
                 sa.getSensor().getId(),
-                a.getType(),
-                a.getValue()
+                sa.getAction().getType(),
+                sa.getAction().getValue()
         );
     }
 }
